--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z4">
-    <span>
+    <span style="margin-right: 7vw;">
         <a routerLink="/">
-            <img style="max-height:64px" src="assets/image/logo.png" alt="logo">
+            <img style="max-height:64px; width:2vw; height: 4vh;" src="assets/image/angular.png" alt="logo">
         </a>
     </span>
 
